# Console-RPG

./: .gitignore  CMakeLists.txt  Makefile
data/: map.txt
data/map/: map.txt
include/: audiomanager.h  character.h  colors.h  combat.hpp  enemy.h  final_boss.h  game.h  gatekeeper.h  giant.h  goblin.h  golem.h  imp.h  infernalimp.h  inventory.hpp  items.h  map.h  necromancer.h  npc.h  orc.h  orc_raider.h  player.h  stoneimp.h  tile.h  type.hpp  war_chief.h
src/: audiomanager.cpp  demo.cpp  game.cpp  main.cpp  player.cpp
src/characters/: character.cpp  enemy.cpp  final_boss.cpp  gate_keeper.cpp  giant.cpp  goblin.cpp  golem.cpp  imp.cpp  infernalimp.cpp  inventory.cpp  items.cpp  m2.cpp  necromancer.cpp  npc.cpp  orc.cpp  orc_raider.cpp  player.cpp  stoneimp.cpp  war_chief.cpp
src/combat/: combat.cpp
src/items/: equipables.cpp
src/items/Equipables/: Armor.cpp  Weapons.cpp
src/items/Usables/: Usables.cpp
src/maps/: map.cpp  tile.cpp
